[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Redkost Comic.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Some Time Later.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Menu_YouWin.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Interface/UserInterface.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 99
outline_size = 2
outline_color = Color( 0.843137, 0.776471, 0.466667, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 2
outline_color = Color( 0.843137, 0.776471, 0.466667, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 45
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Menu_YouWin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.686275, 0.596078, 0.796078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCompleteLabel" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0392157, 0.243137, 0.0980392, 1 )
text = "All Levels Complete!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LevelCompleteLabel2" type="Label" parent="."]
margin_top = 72.7551
margin_right = 1280.0
margin_bottom = 572.755
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.176471, 0.564706, 0.2, 1 )
text = "You Missed xxx Lights"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="UserInterface" parent="." instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 6.10352e-05

[node name="MainMenuBtn" type="Button" parent="."]
margin_left = 510.0
margin_top = 350.0
margin_right = 770.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.819608, 0.917647, 0.745098, 1 )
custom_colors/font_color_hover = Color( 0.466667, 0.745098, 0.184314, 1 )
custom_colors/font_color_pressed = Color( 0.92549, 0.607843, 0.0392157, 1 )
text = "Main menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
